deployment/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phonebill-front
  namespace: phonebill-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phonebill-front
  template:
    metadata:
      labels:
        app: phonebill-front
    spec:
      imagePullSecrets:
      - name: phonebill
      containers:
      - name: phonebill-front
        image: acrdigitalgarage01.azurecr.io/phonebill/phonebill-front:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 256m
            memory: 256Mi
          limits:
            cpu: 1024m
            memory: 1024Mi
        startupProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 6
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
          failureThreshold: 3
        volumeMounts:
        - name: runtime-config
          mountPath: /usr/share/nginx/html/runtime-env.js
          subPath: runtime-env.js
      volumes:
      - name: runtime-config
        configMap:
          name: cm-phonebill-front
